--- a/css/styles.css
+++ b/css/styles.css
@@ -116,10 +116,10 @@ h2{
 	text color: #000000;
 	font-weight: bolder;
 }
-#buzz{
+#text{
 	text color: #000000;
 	font-weight: 400;
-	color: blue;
+	color: #ffffff;
 }
 
 .text-center{
@@ -138,6 +138,65 @@ h2{
 .container {
   text-align: center;
 }*/
+
+
+.col-1-3 {
+  width: 33.33%;
+}
+.col-2-3 {
+  width: 66.66%;
+}
+.col-1-3,
+.col-2-3 {
+  display: inline-block;
+  vertical-align: top;
+}
+.grid,
+.col-1-3,
+.col-2-3 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.container,
+.grid {
+  margin: 0 auto;
+  width: 960px;
+}
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.carousel {
+    width: 200%;
+    transition: margin-left 2s ease-in-out;
+}
+
+.carousel.step {
+    margin-left: -100%;
+}
+
+.slide {
+    width: 50%;
+    float: left;
+}
+
+.carousel h1 {
+    font-size: 130px;
+}
+
+.carousel h1, .carousel p {
+    color: white;
+}
+
+.carousel .video-wrapper {
+    margin: 0 auto;
+}
+
+.intro{
+	float: right;
+	display: inline-block;
+}
 
 
 
@@ -201,7 +260,8 @@ h2{
 			.intro {
 				clear: left;
 				font-size: 90%;
-				line-height: 1.4em;}
+				line-height: 1.4em;
+			}
 			.main-story {
 				background-image: url("../images/triangles.png");
 				background-repeat: no-repeat;
@@ -226,3 +286,14 @@ h2{
 				text-align: right;}
 			.footer a {
 				color: #807c72;}
+
+				.grid {
+				  display: grid;
+				  grid-template-columns: 100px auto 100px;
+				  grid-template-rows: repeat(3, 100px);
+				  grid-gap: 1em;
+				}
+
+				header, footer {
+  			grid-column: 1 / 4;
+				}
